2015-09-23  Andy Buckley  <andy.buckley@cern.ch>

	* Add CMS_2015_I1310737 Z+jets analysis.

	* Allow running MC_{W,Z}INC, MC_{W,Z}JETS as separate bare lepton
	analyses.

2015-09-09  Andy Buckley  <andy.buckley@cern.ch>

	* Fix factor of 2 in LHCB_2013_I1218996 normalisation, thanks to
	Felix Riehn for the report.

2015-08-20  Frank Siegert  <frank.siegert@cern.ch>

	* Add function to ZFinder to retrieve all fiducial dressed
	leptons, e.g. to allow vetoing on a third one (proposed by
	Christian Gutschow).

2015-07-24  Chris Pollard  <cpollard@cern.ch>

	* Release version 2.3.0

2015-07-14  Frank Siegert  <frank.siegert@cern.ch>

	* Hide copy constructor and operator= of FinalState to avoid
	accidental slicing of derived projections when one of these is
	used by a user.

2015-07-08  David Grellscheid  <david.grellscheid@durham.ac.uk>

	* Fix return type of remainingFinalState() to avoid projection slicing.

	* WFinder changes to use full missing energy vector rather than a
	specific neutrino. We have doubts about the usefulness of the
	whole concept of a generic pseudo-W finder... watch this space.

2015-07-02  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Tidy up ATLAS higgs combination analysis.
	* Add ALICE kaon, pion analysis (ALICE_2015_I1357424)
	* Add ALICE strange baryon analysis (ALICE_2014_I1300380)
	* Add CDF ZpT measurement in Z->ee events analysis (CDF_2012_I1124333)
	* Add validated ATLAS W+charm measurement (ATLAS_2014_I1282447)
	* Add validated CMS jet and dijet analysis (CMS_2013_I1208923)

2015-07-01  Andy Buckley  <andy.buckley@cern.ch>

	* Define a private virtual operator= on Projection, to block
	'sliced' accidental value copies of derived class instances.

	* Add new muon-in-jet options to FastJet constructors, pass that
	and invisibles enums correctly to JetAlg, tweak the default
	strategies, and add a FastJets constructor from a
	fastjet::JetDefinition (while deprecating the plugin-by-reference
	constructor).
