@@ -1,0 +1,6 @@
+# BEGIN PLOT /TOTEM_2014_I1328627/d01-x01-y01
+Title=Charged particle $|\eta|$ at 8\,TeV, track $p_\perp>0$\,MeV, for $N_\text{ch}\ge1$
+XLabel=$|\eta|$
+YLabel=$dN/d\eta$
+LogY=0
+# END PLOT
