@@ -161,6 +161,7 @@ dist_pkgdata_DATA = \
   CMS_2012_PAS_QCD_11_010.yoda \
   CMS_QCD_10_024.yoda \
   CMSTOTEM_2014_I1294140.yoda \
+  TOTEM_2014_I1328627.yoda \
   LHCB_2010_S8758301.yoda \
   LHCB_2010_I867355.yoda \
   LHCB_2011_I917009.yoda \
