@@ -1,0 +1,14 @@
+# BEGIN YODA_SCATTER2D /REF/TOTEM_2014_I1328627/d01-x01-y01
+Path=/REF/TOTEM_2014_I1328627/d01-x01-y01
+Type=Scatter2D
+# xval   xerr-   xerr+   yval   yerr-   yerr+
+3.95	0.05	0.05	5.11	0.73	0.73
+4.05	0.05	0.05	5.13	0.73	0.73
+4.15	0.05	0.05	4.93	0.7		0.7
+4.25	0.05	0.05	4.72	0.67	0.67
+4.35	0.05	0.05	4.64	0.66	0.66
+4.45	0.05	0.05	4.52	0.64	0.64
+4.55	0.05	0.05	4.51	0.64	0.64
+4.65	0.05	0.05	4.42	0.63	0.63
+6.925	0.05	0.05	1.81	0.56	0.56
+# END YODA_SCATTER2D 
