@@ -201,7 +201,8 @@ RivetCMSAnalyses_la_SOURCES = \
     CMS_2014_I1303894.cc \
     CMS_2015_I1310737.cc \
     CMS_2015_I1356998.cc \
-    CMSTOTEM_2014_I1294140.cc
+    CMSTOTEM_2014_I1294140.cc \
+    TOTEM_2014_I1328627.cc
 if ENABLE_PRELIMINARY
 RivetCMSAnalyses_la_SOURCES += \
     CMS_QCD_10_024.cc \
