@@ -1,3 +1,7 @@
+2015-09-25  Andy Buckley  <andy.buckley@cern.ch>
+
+	* Adding TOTEM_2014_I1328627 forward charged density in eta analysis.
+
 2015-09-23  Andy Buckley  <andy.buckley@cern.ch>
 
 	* Add CMS_2015_I1310737 Z+jets analysis.
